--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,51 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+dev/proxy.config.json
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# dependencies
+/dev/node_modules
+/dev/dist
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
+/bin/
+/.gradle/
+/build/
+.vscode/*
+dev/.idea
+
